--- a/nav.html
+++ b/nav.html
@@ -7,14 +7,14 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="index.php"><span style="color:rgb(0, 191, 255);">
-        <span class="logo">O</span>melon <span class="logo">B</span>eauty<span class="logo">C</span>reator </a>
+        <span class="logo">O'</span>melon <span class="logo">B</span>eauty<span class="logo">C</span>reator </a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="schedule.php"><strong style="color:rgb(0, 191, 255);font-size:14px;">일정</strong><span style="color:rgb(0, 191, 255);font-size:10px;">Schedule</span></a></li>
-        <li><a href="prize.php"><strong style="color:rgb(0, 191, 255);font-size:14px;">특전</strong><span style="color:rgb(0, 191, 255);font-size:10px;">prize</span></a></li>
-        <li><a href="apply.php"><strong style="color:rgb(0, 191, 255);font-size:14px;">지원</strong><span style="color:rgb(0, 191, 255);font-size:10px;">Apply</span></a></li>
-        <li><a href="contact.php"><strong style="color:rgb(0, 191, 255);font-size:14px;">문의</strong><span style="color:rgb(0, 191, 255);font-size:10px;">Contact</span></a></li>
+        <li><a href="schedule.php"><strong style="color:rgb(0, 191, 255);font-size:16px;">일정</strong><span style="color:rgb(0, 191, 255);font-size:10px;">Schedule</span></a></li>
+        <li><a href="prize.php"><strong style="color:rgb(0, 191, 255);font-size:16px;">특전</strong><span style="color:rgb(0, 191, 255);font-size:10px;">prize</span></a></li>
+        <li><a href="apply.php"><strong style="color:rgb(0, 191, 255);font-size:16px;">지원</strong><span style="color:rgb(0, 191, 255);font-size:10px;">Apply</span></a></li>
+        <li><a href="contact.php"><strong style="color:rgb(0, 191, 255);font-size:16px;">문의</strong><span style="color:rgb(0, 191, 255);font-size:10px;">Contact</span></a></li>
 
         <!--dropdown -->
         <!--<li class="dropdown">
